--- a/src/docs/partials/usage.html
+++ b/src/docs/partials/usage.html
@@ -1832,7 +1832,7 @@ changeOptionsButton.addEventListener('click', () => {
 </page-body>
 
 <page-meta>
-  <title>How to use Tempus Dominus datetime picker</title>
+  <title>Usage</title>
   <post-date>07/08/2021</post-date>
   <update-date>07/08/2021</update-date>
   <excerpt>How to use Tempus Dominus datetime picker
