--- a/src/docs/templates/shell.html
+++ b/src/docs/templates/shell.html
@@ -77,8 +77,12 @@
              onclick="ga('send', 'event', 'Navbar', 'Community links', 'TempisuDominus');">Home</a>
         </li>
         <li class="nav-item col-6 col-md-auto">
-          <a class="nav-link p-2 active" aria-current="true" href="/6/usage"
+          <a class="nav-link p-2" aria-current="true" href="/6/usage.html"
              onclick="ga('send', 'event', 'Navbar', 'Community links', 'Docs');">Usage</a>
+        </li>
+        <li class="nav-item col-6 col-md-auto">
+          <a class="nav-link p-2" aria-current="true" href="/6/change-log.html"
+             onclick="ga('send', 'event', 'Navbar', 'Community links', 'Change Log');">Change Log</a>
         </li>
         <li class="nav-item col-6 col-md-auto">
           <a class="nav-link p-2" href="https://eonasdan.com/"
@@ -115,7 +119,7 @@
         </li>
       </ul>
 
-      <a class="btn btn-bd-download d-lg-inline-block my-2 my-md-0 ms-md-3" href="/docs/5.0/getting-started/download/">fix me</a>
+      <a class="btn btn-bd-download d-lg-inline-block my-2 my-md-0 ms-md-3" href="/docs/6/installation.html">Download</a>
     </div>
   </nav>
 </header>
