--- a/src/docs/styles/styles.scss
+++ b/src/docs/styles/styles.scss
@@ -11,3 +11,12 @@
   max-height: 35vh;
   overflow-y: auto;
 }
+
+section:not(:last-child) {
+  padding-bottom: 20px;
+  border-bottom: 1px solid grey;
+}
+
+section h2 {
+  margin-top: 3rem
+}
