--- a/src/docs/templates/shell.html
+++ b/src/docs/templates/shell.html
@@ -77,8 +77,12 @@
              onclick="ga('send', 'event', 'Navbar', 'Community links', 'TempisuDominus');">Home</a>
         </li>
         <li class="nav-item col-6 col-md-auto">
-          <a class="nav-link p-2" aria-current="true" href="/6/usage.html"
-             onclick="ga('send', 'event', 'Navbar', 'Community links', 'Docs');">Usage</a>
+          <a class="nav-link p-2" aria-current="true" href="/6/installing.html"
+             onclick="ga('send', 'event', 'Navbar', 'Community links', 'Docs');">Docs</a>
+        </li>
+        <li class="nav-item col-6 col-md-auto">
+          <a class="nav-link p-2" aria-current="true" href="/6/examples.html"
+             onclick="ga('send', 'event', 'Navbar', 'Community links', 'Docs');">Examples</a>
         </li>
         <li class="nav-item col-6 col-md-auto">
           <a class="nav-link p-2" aria-current="true" href="/6/change-log.html"
