--- a/src/docs/partials/examples-jquery.html
+++ b/src/docs/partials/examples-jquery.html
@@ -17,12 +17,12 @@
       With jQuery, you will access those values <code>e.[date|oldDate|ect]</code>.
     </p>
   </section>
-  <section class='border-bottom pb-3 mb-3'>
+  <section>
     <h3 id='minimum-setup'>Minimum Setup <a class='anchorjs-link ' aria-label='Anchor' href='#minimum-setup'><i
       class='fas fa-anchor'></i></a> <small class='show-code' title='View Code'><i class='fas fa-code'></i></small></h3>
 
     <p>
-      Version 6 removes the need for an input field, Bootstrap, jQuery and MomemntJs.
+      All you need is an element to atach the picker to.
     </p>
 
     <div class='code-blocks d-none'>
@@ -95,7 +95,7 @@
     </script>
   </section>
 
-  <section class='border-bottom pb-3 mb-3'>
+  <section>
     <h3 id='simple-setup'>Simple Setup <a class='anchorjs-link ' aria-label='Anchor' href='#simple-setup'><i
       class='fas fa-anchor'></i></a> <small class='show-code' title='View Code'><i class='fas fa-code'></i></small></h3>
 
@@ -201,7 +201,7 @@
     </script>
   </section>
 
-  <section class='border-bottom pb-3 mb-3'>
+  <section>
     <h3 id='locales'>Using Locales <a class='anchorjs-link ' aria-label='Anchor' href='#locales'><i
       class='fas fa-anchor'></i></a> <small class='show-code'><i class='fas fa-code'></i></small></h3>
 
@@ -380,7 +380,7 @@ $('#datetimepicker2').tempusDominus({
     </script>
   </section>
 
-  <section class='border-bottom pb-3 mb-3'>
+  <section>
     <h3 id='time-only'>Time Only <a class='anchorjs-link ' aria-label='Anchor' href='#time-only'><i
       class='fas fa-anchor'></i></a> <small class='show-code'><i class='fas fa-code'></i></small></h3>
 
@@ -514,7 +514,7 @@ $('#datetimepicker3').tempusDominus({
     </script>
   </section>
 
-  <section class='border-bottom pb-3 mb-3'>
+  <section>
     <h3 id='date-only'>Date Only <a class='anchorjs-link ' aria-label='Anchor' href='#date-only'><i
       class='fas fa-anchor'></i></a> <small class='show-code'><i class='fas fa-code'></i></small></h3>
 
@@ -647,7 +647,7 @@ $('#datetimepicker4').tempusDominus({
     </script>
   </section>
 
-  <section class='border-bottom pb-3 mb-3'>
+  <section>
     <h3 id='input-only'>Input Only <a class='anchorjs-link ' aria-label='Anchor' href='#simple-setup'><i
       class='fas fa-anchor'></i></a> <small class='show-code' title='View Code'><i class='fas fa-code'></i></small></h3>
 
@@ -737,7 +737,7 @@ $('#datetimepicker4').tempusDominus({
     </script>
   </section>
 
-  <section class='border-bottom pb-3 mb-3'>
+  <section>
     <h3 id='enabledDisabled-dates'>Enabled/Disabled Dates <a class='anchorjs-link ' aria-label='Anchor'
                                                              href='#simple-setup'><i
       class='fas fa-anchor'></i></a> <small class='show-code' title='View Code'><i class='fas fa-code'></i></small></h3>
@@ -861,7 +861,7 @@ $('#enabledDisabled').tempusDominus({
     </script>
   </section>
 
-  <section class='border-bottom pb-3 mb-3'>
+  <section>
     <h3 id='linked-pickers'>Linked pickers <a class='anchorjs-link ' aria-label='Anchor' href='#linked-pickers'><i
       class='fas fa-anchor'></i></a> <small class='show-code' title='View Code'><i class='fas fa-code'></i></small></h3>
 
@@ -1060,7 +1060,7 @@ linkedPicker2Element.on(tempusDominus.Namespace.Events.change, (e) => {
     </script>
   </section>
 
-  <section class='border-bottom pb-3 mb-3'>
+  <section>
     <h3 id='custom-icons'>Custom Icons <a class='anchorjs-link ' aria-label='Anchor' href='#custom-icons'><i
       class='fas fa-anchor'></i></a> <small class='show-code' title='View Code'><i class='fas fa-code'></i></small></h3>
 
@@ -1204,7 +1204,7 @@ $('#customIcons').tempusDominus({
     </script>
   </section>
 
-  <section class='border-bottom pb-3 mb-3'>
+  <section>
     <h3 id='view-mode'>View Mode <a class='anchorjs-link ' aria-label='Anchor' href='#view-mode'><i
       class='fas fa-anchor'></i></a> <small class='show-code' title='View Code'><i class='fas fa-code'></i></small></h3>
 
@@ -1316,7 +1316,7 @@ $('#viewMode').tempusDominus({
       });
     </script>
   </section>
-  <section class='border-bottom pb-3 mb-3'>
+  <section>
     <h3 id='min-view-mode'>Minimum View <a class='anchorjs-link ' aria-label='Anchor' href='#min-view-mode'><i
       class='fas fa-anchor'></i></a> <small class='show-code' title='View Code'><i class='fas fa-code'></i></small></h3>
 
@@ -1442,7 +1442,7 @@ $('#minViewMode').tempusDominus({
     </script>
   </section>
 
-  <section class='border-bottom pb-3 mb-3'>
+  <section>
     <h3 id='disabled-days-of-the-week'>Disabled Days of the Week <a class='anchorjs-link ' aria-label='Anchor'
                                                                     href='#disabled-days-of-the-week'><i
       class='fas fa-anchor'></i></a> <small class='show-code' title='View Code'><i class='fas fa-code'></i></small></h3>
@@ -1558,7 +1558,7 @@ $('#disabledDow').tempusDominus({
   </section>
 
 
-  <section class='border-bottom pb-3 mb-3'>
+  <section>
     <h3 id='inline'>Inline <a class='anchorjs-link ' aria-label='Anchor' href='#inline'><i
       class='fas fa-anchor'></i></a> <small class='show-code' title='View Code'><i class='fas fa-code'></i></small></h3>
 
@@ -1642,7 +1642,7 @@ $('#inlinePicker').tempusDominus({
   </section>
 
 
-  <section class='border-bottom pb-3 mb-3'>
+  <section>
     <h3 id='multidate'>Multiple Dates <a class='anchorjs-link ' aria-label='Anchor' href='#multidate'><i
       class='fas fa-anchor'></i></a> <small class='show-code' title='View Code'><i class='fas fa-code'></i></small></h3>
 
@@ -1756,7 +1756,7 @@ $('#multipleDatePicker').tempusDominus({
     </script>
   </section>
 
-  <section class='border-bottom pb-3 mb-3'>
+  <section>
     <h3 id='setting-options'>Updating Options <a class='anchorjs-link ' aria-label='Anchor' href='#setting-options'><i
       class='fas fa-anchor'></i></a> <small class='show-code' title='View Code'><i class='fas fa-code'></i></small></h3>
 
