--- a/src/docs/partials/examples.html
+++ b/src/docs/partials/examples.html
@@ -1,10 +1,18 @@
 <page-body>
-  <section class='border-bottom pb-3 mb-3'>
+  <section>
+    <p>
+      Version 6 removes the need for an input field, Bootstrap, jQuery and MomemntJs.
+    </p>
+    <p>
+      If you still need jQuery, check out the <a href='examples-jquery.html'>jQuery examples</a>.
+    </p>
+  </section>
+  <section>
     <h3 id='minimum-setup'>Minimum Setup <a class='anchorjs-link ' aria-label='Anchor' href='#minimum-setup'><i
       class='fas fa-anchor'></i></a> <small class='show-code' title='View Code'><i class='fas fa-code'></i></small></h3>
 
     <p>
-      Version 6 removes the need for an input field, Bootstrap, jQuery and MomemntJs.
+      All you need is an element to atach the picker to.
     </p>
 
     <div class='code-blocks d-none'>
@@ -77,7 +85,7 @@
     </script>
   </section>
 
-  <section class='border-bottom pb-3 mb-3'>
+  <section>
     <h3 id='simple-setup'>Simple Setup <a class='anchorjs-link ' aria-label='Anchor' href='#simple-setup'><i
       class='fas fa-anchor'></i></a> <small class='show-code' title='View Code'><i class='fas fa-code'></i></small></h3>
 
@@ -183,7 +191,7 @@
     </script>
   </section>
 
-  <section class='border-bottom pb-3 mb-3'>
+  <section>
     <h3 id='locales'>Using Locales <a class='anchorjs-link ' aria-label='Anchor' href='#locales'><i
       class='fas fa-anchor'></i></a> <small class='show-code'><i class='fas fa-code'></i></small></h3>
 
@@ -362,7 +370,7 @@
     </script>
   </section>
 
-  <section class='border-bottom pb-3 mb-3'>
+  <section>
     <h3 id='time-only'>Time Only <a class='anchorjs-link ' aria-label='Anchor' href='#time-only'><i
       class='fas fa-anchor'></i></a> <small class='show-code'><i class='fas fa-code'></i></small></h3>
 
@@ -496,7 +504,7 @@
     </script>
   </section>
 
-  <section class='border-bottom pb-3 mb-3'>
+  <section>
     <h3 id='date-only'>Date Only <a class='anchorjs-link ' aria-label='Anchor' href='#date-only'><i
       class='fas fa-anchor'></i></a> <small class='show-code'><i class='fas fa-code'></i></small></h3>
 
@@ -629,7 +637,7 @@
     </script>
   </section>
 
-  <section class='border-bottom pb-3 mb-3'>
+  <section>
     <h3 id='input-only'>Input Only <a class='anchorjs-link ' aria-label='Anchor' href='#simple-setup'><i
       class='fas fa-anchor'></i></a> <small class='show-code' title='View Code'><i class='fas fa-code'></i></small></h3>
 
@@ -719,7 +727,7 @@
     </script>
   </section>
 
-  <section class='border-bottom pb-3 mb-3'>
+  <section>
     <h3 id='enabledDisabled-dates'>Enabled/Disabled Dates <a class='anchorjs-link ' aria-label='Anchor'
                                                              href='#simple-setup'><i
       class='fas fa-anchor'></i></a> <small class='show-code' title='View Code'><i class='fas fa-code'></i></small></h3>
@@ -843,7 +851,7 @@
     </script>
   </section>
 
-  <section class='border-bottom pb-3 mb-3'>
+  <section>
     <h3 id='linked-pickers'>Linked pickers <a class='anchorjs-link ' aria-label='Anchor' href='#linked-pickers'><i
       class='fas fa-anchor'></i></a> <small class='show-code' title='View Code'><i class='fas fa-code'></i></small></h3>
 
@@ -1049,7 +1057,7 @@ const subscription = linked2.subscribe(tempusDominus.Namespace.Events.change, (e
     </script>
   </section>
 
-  <section class='border-bottom pb-3 mb-3'>
+  <section>
     <h3 id='custom-icons'>Custom Icons <a class='anchorjs-link ' aria-label='Anchor' href='#custom-icons'><i
       class='fas fa-anchor'></i></a> <small class='show-code' title='View Code'><i class='fas fa-code'></i></small></h3>
 
@@ -1193,7 +1201,7 @@ const subscription = linked2.subscribe(tempusDominus.Namespace.Events.change, (e
     </script>
   </section>
 
-  <section class='border-bottom pb-3 mb-3'>
+  <section>
     <h3 id='view-mode'>View Mode <a class='anchorjs-link ' aria-label='Anchor' href='#view-mode'><i
       class='fas fa-anchor'></i></a> <small class='show-code' title='View Code'><i class='fas fa-code'></i></small></h3>
 
@@ -1305,7 +1313,7 @@ const subscription = linked2.subscribe(tempusDominus.Namespace.Events.change, (e
       });
     </script>
   </section>
-  <section class='border-bottom pb-3 mb-3'>
+  <section>
     <h3 id='min-view-mode'>Minimum View <a class='anchorjs-link ' aria-label='Anchor' href='#min-view-mode'><i
       class='fas fa-anchor'></i></a> <small class='show-code' title='View Code'><i class='fas fa-code'></i></small></h3>
 
@@ -1431,7 +1439,7 @@ const subscription = linked2.subscribe(tempusDominus.Namespace.Events.change, (e
     </script>
   </section>
 
-  <section class='border-bottom pb-3 mb-3'>
+  <section>
     <h3 id='disabled-days-of-the-week'>Disabled Days of the Week <a class='anchorjs-link ' aria-label='Anchor'
                                                                     href='#disabled-days-of-the-week'><i
       class='fas fa-anchor'></i></a> <small class='show-code' title='View Code'><i class='fas fa-code'></i></small></h3>
@@ -1547,7 +1555,7 @@ const subscription = linked2.subscribe(tempusDominus.Namespace.Events.change, (e
   </section>
 
 
-  <section class='border-bottom pb-3 mb-3'>
+  <section>
     <h3 id='inline'>Inline <a class='anchorjs-link ' aria-label='Anchor' href='#inline'><i
       class='fas fa-anchor'></i></a> <small class='show-code' title='View Code'><i class='fas fa-code'></i></small></h3>
 
@@ -1631,7 +1639,7 @@ const subscription = linked2.subscribe(tempusDominus.Namespace.Events.change, (e
   </section>
 
 
-  <section class='border-bottom pb-3 mb-3'>
+  <section>
     <h3 id='multidate'>Multiple Dates <a class='anchorjs-link ' aria-label='Anchor' href='#multidate'><i
       class='fas fa-anchor'></i></a> <small class='show-code' title='View Code'><i class='fas fa-code'></i></small></h3>
 
@@ -1745,8 +1753,8 @@ const subscription = linked2.subscribe(tempusDominus.Namespace.Events.change, (e
     </script>
   </section>
 
-  <section class='border-bottom pb-3 mb-3'>
-    <h3 id='setting-options'>Simple Setup <a class='anchorjs-link ' aria-label='Anchor' href='#setting-options'><i
+  <section>
+    <h3 id='setting-options'>Update options <a class='anchorjs-link ' aria-label='Anchor' href='#setting-options'><i
       class='fas fa-anchor'></i></a> <small class='show-code' title='View Code'><i class='fas fa-code'></i></small></h3>
 
     <p>
