--- a/src/docs/styles/styles.scss
+++ b/src/docs/styles/styles.scss
@@ -13,7 +13,8 @@
 }
 
 section:not(:last-child) {
-  padding-bottom: 20px;
+  padding-bottom: 1rem;
+  margin-bottom: 1rem;
   border-bottom: 1px solid grey;
 }
 
